# integrations

protocol/substrate/core-wrapper/: Dockerfile  ISSUE.md  package.json
protocol/substrate/core-wrapper/module/: Cargo.toml  schema.graphql
protocol/substrate/core-wrapper/module/src/: base_api.rs  error.rs  lib.rs  utils.rs
protocol/substrate/core-wrapper/tests/: mutation.spec.ts
