[package]
name = "substrate-core-wrapper"
version = "0.0.1"
description = "TODO"
authors = [ "TODO <todo@todo.com>" ]
repository = "https://todo.com"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web3api-wasm-rs = { version = "0.0.1-prealpha.82" }
getrandom = { version = "0.2", features = ["custom"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
serde_json = "1"
hex = "0.4.3"
thiserror = "1.0.30"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
scale-info = { version = "2.0.1" }
frame-metadata = { version = "15.0.0", features = ["v14"] }

# If this 2 substrate crate can be incorporated into the code (used in base_api mod), then the rest should follow
#sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
#sp-version = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["std", "serde"]}
#sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }



[profile.release]
opt-level = 's'
lto = true
panic = 'abort'

[features]
w3-invoke = []
